...
                app:baselineTopVisible="true"
                app:layout_constraintTop_toBottomOf="@id/fragment_settings_reset"
                app:settingsLabel="@string/security"
                app:settingsValueVisibility="false" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/fragment_settings_enable_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pin_icon_24"
                android:drawablePadding="@dimen/indent_xxl"
                android:paddingStart="@dimen/indent_l"
                android:paddingEnd="@dimen/indent_xl"
...
